--- a/numberBaseball/src/main/webapp/css/common.css
+++ b/numberBaseball/src/main/webapp/css/common.css
@@ -6,3 +6,11 @@
 	width : 120px;
 	hegith : 25px;
 }
+.answerInput {
+	width : 50px;
+	height : 50px;
+	font-size: 30px;
+	text-align: center;
+	background-color: gray;
+	color: white;
+}
